[gd_scene load_steps=3 format=3 uid="uid://tv0im8eeplcd"]

[ext_resource type="Script" path="res://common/prefabs/cam/cam_follow_area.gd" id="1_qelgd"]

[sub_resource type="BoxShape3D" id="BoxShape3D_cteqe"]

[node name="CamFollowArea" type="Area3D"]
script = ExtResource("1_qelgd")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_cteqe")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
